# task_list_manager

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0dba396579cb_initial_migrate.py  3d1d98658d89_initial_migrate.py  805fc38df093_initial_migrate.py  fb1f4799babe_.py
api/: __init__.py  dependencies.py  main.py  redis_client.py
api/core/: __init__.py  config.py  models.py  schemas.py
api/db/: __init__.py  dbhelper.py  models.py  shemas.py
api/db/db_queries/: __init__.py  auth_qr.py  tasks_qr.py  user_qr.py
api/routers/: __init__.py  auth.py  auth_helpers.py  tasks.py
api/routers/auth/: __init__.py  auth.py  auth_helpers.py  jwt_utils.py
api/routers/tasks/: __init__.py  tasks.py
auth/: jwt_utils.py
certs/: README.md
confs/postgresql/: my_postgresql.conf
jwt_auth/: jwt_utils.py
